# esp-hal

./: Cargo.toml
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  documentation.yml  hil.yml
documentation/: API-GUIDELINES.md
esp-hal/: CHANGELOG.md  Cargo.toml  README.md  build.rs  esp_config.yml
esp-hal-common/: Cargo.toml  build.rs
esp-hal-common/src/: gpio.rs  lib.rs  prelude.rs  spi.rs  system.rs  timer.rs
esp-hal-common/src/dma/: gdma.rs  mod.rs
esp-hal-common/src/gpio/: esp32c3.rs
esp-hal-common/src/interrupt/: riscv.rs  xtensa.rs
esp-hal/.cargo/: config.toml
esp-hal/examples/: adc.rs  adc_cal.rs  advanced_serial.rs  aes.rs  aes_dma.rs  blinky.rs  blinky_erased_pins.rs  clock_monitor.rs  crc.rs  debug_assist.rs  direct-vectoring.rs  embassy_hello_world.rs  embassy_i2c.rs  embassy_i2s_read.rs  embassy_i2s_sound.rs  embassy_rmt_rx.rs  embassy_rmt_tx.rs  embassy_serial.rs  embassy_spi.rs  embassy_wait.rs  gpio_interrupt.rs  hello_rgb.rs  hello_world.rs  hmac.rs  i2c_bmp180_calibration_data.rs  i2c_display.rs  i2s_read.rs  i2s_sound.rs  interrupt_preemption.rs  ledc.rs  qspi_flash.rs  ram.rs  read_efuse.rs  rmt_rx.rs  rmt_tx.rs  rng.rs  rsa.rs  rtc_time.rs  rtc_watchdog.rs  serial_interrupts.rs  (+15 more)
esp-hal/ld/esp32/: linkall.x
esp-hal/ld/esp32c2/: linkall.x
esp-hal/ld/esp32c3/: linkall.x
esp-hal/ld/esp32c6/: linkall.x
esp-hal/ld/esp32h2/: linkall.x
esp-hal/ld/esp32s2/: linkall.x
esp-hal/ld/esp32s3/: linkall.x
esp-hal/ld/soc/esp32c2/: bl-linkall.x
esp-hal/ld/soc/esp32c3/: bl-linkall.x
esp-hal/ld/soc/esp32c6/: bl-linkall.x
esp-hal/src/: lib.rs  prelude.rs  time.rs
esp-hal/src/dma/: gdma.rs  mod.rs
esp-hal/src/radio/: common_adapter.rs  mod.rs
esp-hal/src/radio/ble/: btdm.rs  mod.rs  npl.rs  os_adapter_esp32.rs  os_adapter_esp32c2.rs  os_adapter_esp32c3_s3.rs  os_adapter_esp32c6.rs  os_adapter_esp32h2.rs
esp-hal/src/radio/ble/controller/: mod.rs
esp-hal/src/radio/compat/: common.rs  malloc.rs  misc.rs  mutex.rs  queue.rs  semaphore.rs  timer_compat.rs
esp-hal/src/radio/esp_now/: mod.rs
esp-hal/src/radio/ieee802154/: hal.rs  mod.rs  raw.rs
esp-hal/src/radio/phy/: common_adapter.rs  mod.rs  phy_fmt.rs
esp-hal/src/radio/phy/init_data/: phy_init_data_esp32.rs  phy_init_data_esp32c2.rs  phy_init_data_esp32h2.rs  phy_init_data_esp32s2.rs  phy_init_data_esp32s3.rs
esp-hal/src/radio/phy/phy_init_data/: phy_init_data_esp32.rs  phy_init_data_esp32c2.rs  phy_init_data_esp32c6.rs  phy_init_data_esp32s2.rs  phy_init_data_esp32s3.rs
esp-hal/src/radio/radio/: radio_esp32.rs  radio_esp32c2.rs  radio_esp32c3.rs  radio_esp32c6.rs  radio_esp32h2.rs  radio_esp32s2.rs  radio_esp32s3.rs
esp-hal/src/radio/radio_hal/: mod.rs  radio_esp32.rs  radio_esp32c2.rs  radio_esp32c3.rs  radio_esp32c6.rs  radio_esp32h2.rs  radio_esp32s2.rs  radio_esp32s3.rs
esp-hal/src/radio/wifi/: ap.rs  csi.rs  event.rs  internal.rs  mod.rs  scan.rs  sniffer.rs
esp-hal/src/radio/wifi/os_adapter/: esp32.rs  esp32c2.rs  esp32c3.rs  esp32c6.rs  esp32h2.rs  esp32s2.rs  esp32s3.rs  mod.rs
esp-hal/src/radio/wifi/sta/: eap.rs  mod.rs
esp-hal/src/soc/esp32c6/: peripherals.rs
esp-hal/src/soc/esp32s3/: gpio.rs
esp-hal/src/spi/: master.rs
esp-hal/src/timer/: systimer.rs
esp-hal/src/uart/: mod.rs
esp-metadata/: Cargo.toml
esp-metadata-generated/src/: _build_script_utils.rs  _generated_esp32.rs  _generated_esp32c2.rs  _generated_esp32c3.rs  _generated_esp32c5.rs  _generated_esp32c6.rs  _generated_esp32h2.rs  _generated_esp32s2.rs  _generated_esp32s3.rs
esp-metadata/devices/: esp32c6.toml
esp-metadata/src/: cfg.rs  generate_cfg.rs
esp-phy/: Cargo.toml
esp-radio/: CHANGELOG.md
esp-rtos/: Cargo.toml
esp-wifi/: CHANGELOG.md  Cargo.toml  MIGRATING-0.9.md  build.rs
esp-wifi/src/: lib.rs
esp-wifi/src/ble/: btdm.rs  npl.rs  os_adapter_esp32.rs  os_adapter_esp32c2.rs  os_adapter_esp32c3.rs  os_adapter_esp32c6.rs  os_adapter_esp32h2.rs  os_adapter_esp32s3.rs
esp-wifi/src/common_adapter/: common_adapter_esp32c3.rs  common_adapter_esp32c6.rs  common_adapter_esp32h2.rs  common_adapter_esp32s3.rs  mod.rs
esp-wifi/src/esp_now/: mod.rs
esp-wifi/src/timer/: timer_esp32c3.rs  timer_esp32s3.rs
esp-wifi/src/wifi/: mod.rs  os_adapter.rs  utils.rs
esp32-hal/: Cargo.toml
esp32c2-hal/: Cargo.toml
esp32c3-hal/: Cargo.toml
esp32c3-hal/examples/: spi_loopback_dma.rs
esp32c6-hal/.cargo/: config.toml
esp32c6-hal/examples/: hello_world.rs
esp32c6-hal/ld/: bl-esp32c6-memory.x  db-riscv-link.x  rom-functions.x
esp32s2-hal/: Cargo.toml
esp32s3-hal/: Cargo.toml  build.map
esp32s3-hal/.cargo/: config.toml
esp32s3-hal/examples/: systimer.rs  timer_interrupt.rs  usb_serial_jtag.rs
esp32s3-hal/ld/: db-esp32s3.x  esp32s3.x  memory.x
esp32s3-hal/src/: lib.rs
examples/: Cargo.toml
examples/.cargo/: config.toml
examples/async/embassy_hello_world_defmt/: Cargo.toml
examples/ble/bas_peripheral/: Cargo.toml
examples/ble/scanner/: Cargo.toml
examples/esp-now/embassy_esp_now/: Cargo.toml
examples/esp-now/embassy_esp_now_duplex/: Cargo.toml
examples/esp-now/esp_now/: Cargo.toml
examples/ieee802154/ieee802154_receive_all_frames/: Cargo.toml
examples/ieee802154/ieee802154_receive_frame/: Cargo.toml
examples/ieee802154/ieee802154_send_broadcast_frame/: Cargo.toml
examples/ieee802154/ieee802154_send_frame/: Cargo.toml
examples/ieee802154/ieee802154_sniffer/: Cargo.toml
examples/ota/update/: Cargo.toml
examples/src/: lib.rs
examples/wifi/80211_tx/: Cargo.toml
examples/wifi/embassy_access_point/: Cargo.toml
examples/wifi/embassy_access_point_with_sta/: Cargo.toml
examples/wifi/embassy_coex/: Cargo.toml
examples/wifi/embassy_dhcp/: Cargo.toml
examples/wifi/embassy_sntp/: Cargo.toml
examples/wifi/sniffer/: Cargo.toml
hil-test/: Cargo.toml
xtask/: Cargo.toml  MCP.md
xtask/src/: documentation.rs  lib.rs  main.rs
xtask/src/commands/: mod.rs  release.rs  run.rs
xtask/src/mcp/: tools.rs
xtensa-lx/: CHANGELOG.md
xtensa-lx-rt/src/: lib.rs
xtensa-lx-rt/src/exception/: asm.rs  (+1 more)
(+20 files in other folders)
